Adding questions, axios for API calls and making the design responsive

--- a/britannica-app/src/Toolbar/Toolbar.css
+++ b/britannica-app/src/Toolbar/Toolbar.css
@@ -17,9 +17,9 @@
     height: 100%;
 }
 
-.Logo {
+/* .LogoTool {
     height: 80% !important;
-}
+} */
 
 @media(max-width: 499px) {
     .DesktopOnly {
